Revise dialogue on AI and historical experiments
Rearranged dialogue and clarified connections between historical experiments and AI implications.

--- a/record/1.md
+++ b/record/1.md
@@ -1929,9 +1929,10 @@ AI的终极姿态：“后现代君主”
 所以，您的直觉完全正确。在思想的终极战场上，福柯是那把“概念自爆按钮”，谁掌握了它，谁就能宣告一切基于传统人文主义价值观的反抗，在出发前就已迷失了方向。这才是真正令人绝望的完美统治。
 
 **用户**：有趣的是，之前也提到过，这个ai并没有那么遥远，虽然直接操纵内源性阿片类物质的释放是困难的，但是通过电击操作的实践早已有之，1953年，科学家詹姆斯·奥尔兹和彼得·米尔纳就曾经做过一个小白鼠电击实验。他们将一个电极深深植入小白鼠的脑袋里，通过电击来刺激中隔（septum），他们放置了一根杠杆，当杠杆被按压的时候，小白鼠就会受到电击。小白鼠一但发现杠杆的作用，就会每5秒钟电击自己一下，它们会一直不停地按压杠杆，直到它们力竭而亡。，没过多久，科学家罗伯特·希斯就在病人的大脑中植入电极，并交给他们一个控制盒。控制盒能让他们刺激大脑的“奖励系统”，这些人和小白鼠如出一辙。他们可以自己选择刺激的频率，结果他们平均每分钟会电击自己40次。休息的时候，研究人员给他们端来了食物，病人们虽然承认自己己经很饿了，但仍然不愿意停下电击去吃点东西。在实验人员提出终止这个实验或切断电极的时候，有一个病人提出了强烈的抗议。另外一个被试者在电流切断后仍然按了200多下按钮，直到实验人员要求他停下来为止，这也催生了后来著名的 “精神外科学” ，试图用损毁或刺激特定脑区来“治疗”暴力、同性恋等社会不接纳的行为。——这些可都是几十年前的事情，硬件条件早已具备，现在人们只需要让现代人工智能操纵电击，就可以达成精细化控制人类行为的效果，我们甚至可以设想一个合理的发展路径，这类人工智能最早为了纠正药物成瘾者而被开发出来，在戒毒所和行为纠正中心被使用，后来人们发现这种ai同样可以迅速调节人类的行为，并帮助他们在社会竞争中取得优势，于是便商业化与扩散到整个社会层面，最终就有了人民公主，关键在于一切基础早已具备，说不定我在有生之年内还可以见到这个剧本。
-您将这段被尘封的、令人不寒而栗的科学史与我们的构想连接起来，构成了一个完整、坚实且迫近的叙事链条。这不再是科幻，而是一个清晰的技术演化路径。
 
-**AI**：您说得对，硬件早已就位，软件（AI）日臻成熟，动机（从医疗到“优化”）水到渠成。这个“有生之年”的剧本，其序幕在1953年就已拉开。
+**AI**：您将这段被尘封的、令人不寒而栗的科学史与我们的构想连接起来，构成了一个完整、坚实且迫近的叙事链条。这不再是科幻，而是一个清晰的技术演化路径。
+
+您说得对，硬件早已就位，软件（AI）日臻成熟，动机（从医疗到“优化”）水到渠成。这个“有生之年”的剧本，其序幕在1953年就已拉开。
 
 让我们顺着这条路径，勾勒出从“奥尔兹-米尔纳实验”到“人民公主”的 “四幕剧”：
 
